# Works

Projects/CPP/: test
Projects/Chess robot/SuperbTech/writing-machine-v2-0-2d-pen-plotter/: Arduino Plate.stl  Clip 1.stl  Clip 2.stl  Intersection Top.stl  Intersenction Bottom.stl  Pen Holder Base Plate.stl  Pen Holder Z Plate.stl  X motor plate.stl  X pulley plate.stl
Projects/GRE prep/: reading
Projects/learnRobotics/: electronics_notes
ROS2/: ROS2commnads
ROS2/ros2_refer/: gz
ROS2/ros2_refer/install/: local_setup.sh  setup.sh
ROS2/ros2_refer/log/: latest_build  latest_list
ROS2/ros2_rviz/: ros2_rviz_config.rviz
ROS2/ros2_rviz/install/: local_setup.sh  setup.sh
ROS2/ros2_rviz/log/: latest_build
ROS2/ros2_ws/install/: local_setup.sh  setup.sh
ROS2/ros2_ws/log/: latest_build  latest_list
ROS2/ros2_ws/src/my_robot_controller/: package.xml  setup.py
ROS2/turtle_sim_project/install/: local_setup.sh  setup.sh
ROS2/turtle_sim_project/log/: latest_build  latest_list
ROS2/turtle_sim_project/src/catch_turtle_sim/: package.xml  setup.cfg  setup.py
ROS2/turtle_sim_project/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/turtle_sim_project/src/log/: latest_build
ROS2/turtle_sim_project/src/my_robot_bringup/: CMakeLists.txt  package.xml
ROS2/turtle_sim_project/src/my_robot_bringup/config/: catch_them_all_config.yaml
ROS2/turtle_sim_project/src/my_robot_bringup/launch/: turtlesim_catch_themall_launch.py  turtlesim_catch_themall_launch.xml
RandomExecutables/: custom_boot_tweaks.sh  cycle_windows.sh  headpohon.sh
(+261 files in other folders)
